Hack for Safari on iOS to prevent content scrolling under Modal window

--- a/src/modules/cart/Cart/styles.css
+++ b/src/modules/cart/Cart/styles.css
@@ -6,8 +6,6 @@
 .content {
   width: 100%;
   height: 100%;
-  -webkit-overflow-scrolling: touch;
-  overflow-y: scroll;
   position: relative;
 }
 
