--- a/src/modules/catalog/Category/styles.css
+++ b/src/modules/catalog/Category/styles.css
@@ -1,7 +1,5 @@
 .category {
   margin: 0 5px;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
 }
 
 .categoryName {
