--- a/src/modules/product/Product/styles.css
+++ b/src/modules/product/Product/styles.css
@@ -4,8 +4,6 @@
 }
 
 .productContent {
-  -webkit-overflow-scrolling: touch;
-  overflow-y: scroll;
   position: relative;
   width: 100%;
 }
