--- a/src/pages/HomePage/styles.css
+++ b/src/pages/HomePage/styles.css
@@ -1,4 +1,3 @@
 .homePage {
-  overflow: scroll;
-  -webkit-overflow-scrolling: touch;
+  position: relative;
 }
